[package]
name = "qdpx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zip = "0.5.13"
thiserror = "1.0.30"
quick-xml = "0.22.0"
anyhow = "1.0.45"
chrono = "0.4.19"
uuid = "0.8.2"
log = "0.4.14"

[dev-dependencies]
qu = "0.3.0"
structopt = "0.3.25"

[profile.dev]
opt-level = 3
