[package]
name = "qdpx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zip = "0.5.13"
thiserror = "1.0.30"
quick-xml = { version = "0.22.0", features = ["serialize"] }
anyhow = "1.0.45"
chrono = { version = "0.4.19", features = ["serde"] }
uuid = { version = "0.8.2", features = ["serde"] }
log = "0.4.14"
serde = { version = "1.0.130", features = ["derive"] }
serde_with = "1.11.0"

[dev-dependencies]
qu = "0.3.0"
serde_json = "1.0.71"
structopt = "0.3.25"

[profile.dev]
opt-level = 3
